<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:shadowColor="@android:color/darker_gray"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="20"
        android:text="@string/Driver_Login"
        android:textSize="26sp"
        android:textStyle="bold|italic" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/user_id"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:autofillHints="@string/HintUserid"
        android:background="@drawable/edit_style"
        android:drawableStart="@drawable/ic_worker"
        android:drawablePadding="13dp"
        android:hint="@string/HintUserid"
        android:inputType="text"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColorHint="#0F0F0F" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:autofillHints="@string/HintPassWord"
        android:background="@drawable/edit_style"
        android:drawableStart="@drawable/ic_password1"
        android:drawablePadding="15dp"
        android:hint="@string/HintPassWord"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColorHint="#0F0F0F"

        />

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="10dp"
        android:text="@string/checkbox"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/btn_background"
        android:text="@string/Button_login"
        android:textColor="@android:color/white"
        android:textSize="25sp" />
    <!--<Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/register"
        android:text="@string/Button_Register"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/btn_background"
        android:textColor="@color/white"
        />-->

</LinearLayout>